Obteniendo respuesta del servidor con Fetch API

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Paezjm86/platzigram#readme",
   "dependencies": {
+    "axios": "^0.15.3",
     "empty-element": "^1.0.0",
     "express": "^4.14.0",
     "intl": "^1.2.5",
