--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   },
   "homepage": "https://github.com/Paezjm86/platzigram#readme",
   "dependencies": {
-    "axios": "^0.18.1",
+    "axios": "^0.30.2",
     "empty-element": "^1.0.0",
     "express": "^4.14.0",
     "file-extension": "^3.1.0",
     "intl": "^1.2.5",
     "intl-messageformat": "^1.3.0",
     "intl-relativeformat": "^1.3.0",
-    "materialize-css": "^0.97.7",
-    "multer": "^1.2.0",
+    "materialize-css": "^1.0.0",
+    "multer": "^2.0.0",
     "overlay-component": "^0.3.5",
     "page": "^1.7.1",
-    "pug": "^2.0.0-beta6",
+    "pug": "^3.0.3",
     "superagent": "^3.0.0",
     "title": "^1.0.0",
     "webcamjs": "^1.0.21",
